tooling/nargo_cli/tests/snapshots/execute__tests__while_keyword_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "11503851985230068697",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71VS07DMBC1m8RNKBUV3cABWLABu02UdoO6ACFxC6sl5+jRSdAMGQ2TQJu4I0Vjxy/vzfMvWrWhIcdqQCDJB+QM8oSMR/Wzg74dFi5jumPyb2yeZ4K/EetfZ8Cpw/Bb5A80/3YKPK/Hlp96Qd20fmakfa3a/RHKP65fSP/LHs8z8Lq8gNc6VnOmT0ML7yIBo8ka3UN7LuAU8YhnJD6O76vcWIt6EfAn6nftVD9h+DvoX7H6mxwPqLMqvavWvvKFPxzyvb9l/E107QVcK4rVHfnbSw936D2+UN17fE70hvpYMC59OY8/90Qchn+F/EkYfmdqjgfgugF+Q7Q0a+O9jWeJ4ydknOKfITfYR6bH7zWqh/2Y6OkePcQ/QQ68PpafXao1U6fNKfVoBD4+pzvIDXYNbUkvYmPTnlpS1YZUC/82IzVI+JTVjvgt5Gb8HdrSOU6ZnhHqozUlHX5MB96w+hD/0lOfFr4/9xxRH+ZEH9K6cB9v//QxFXyM/d/LC1/ufencNnefuSv++u99ATsu89BlDAAA",
  "debug_symbols": "ldVLioQwEAbgu2TtIu/EvsowND5iExAVHwODePdJBm0knc2/ERLqM5WypHbSunp7Pf3QjQt5fO2kH5tq9eMQVvtRkHr2fe9fz/s2ofHBxH/8MlVDXC5rNa/koWxB3NCSh2FBd753YY8e3wVhEoxXYLwG4w0Wz7PvZ5qegOkPYWBhYVGiQtCssOwSlqeCwYLDwsAiX6tSnYJTmgiZvYeg/BSC2lRk7yHElZWQaXWlgIWEhYKFgWuVrS5n8hI8FSpbXS7eZ3xkpTgsstXl9p1VmXaJkrBQsNCwMLCwaO+qEhWawgL+ozSHhUQ7USu0r7SGhYGFhUWJiSOsfqrZV3XvzvHdbUNzm+br7+SSwT7NY+PabXZxxN+me+wFVhZcxlEZP7NhhRHhjHDOHw==",
  "file_map": {
    "50": {
      "source": "fn main() {\n    // Safety: test code\n    unsafe {\n        check_while();\n    }\n\n    check_comptime_while();\n}\n\nunconstrained fn check_while() {\n    let mut i = 0;\n    let mut sum = 0;\n\n    while i < 4 {\n        if i == 2 {\n            i += 1;\n            continue;\n        }\n\n        sum += i;\n        i += 1;\n    }\n\n    assert_eq(sum, 1 + 3);\n}\n\nfn check_comptime_while() {\n    comptime {\n        let mut i = 0;\n        let mut sum = 0;\n\n        while i < 4 {\n            if i == 2 {\n                i += 1;\n                continue;\n            }\n\n            sum += i;\n            i += 1;\n        }\n\n        assert_eq(sum, 1 + 3);\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/while_keyword/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
