tooling/nargo_cli/tests/snapshots/execute__tests__wildcard_type_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15940644962450072335",
  "abi": {
    "parameters": [
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1aO2/jRhAeWqREkVYsXNKkOSRIigRpqJfl6wgkZYAgXVrFsoF06dMw/zzey4708eOIoq1dwwfcAsKS3NmZbx47+9Am8n/Jnn6Jf059nUB9Je2ibbWvq8vKIiCvKhbGJCBGtK3a29l45N8zgY+skJzrBLTf+4cp8Ut8vzqQcaYkNyT/u2q9m0q7BMa/mko70APzX06BZwT+1cTz+aU58mddNA4SieandWQ9lzPpJqSEdEsjxUhC8oT0FJJfSNSYWiQkT/GwffR5pjTNEU9CbWnT1UPbsqathyv50+890HFsXQHdj/D8k7QxXBk6JIYOMePrKX5vI8fQ2vIB+ydt2rKxDX2Qgj3fk31ixBzaJ9L4Xn8pp3OXxsOkkUMZkT3RRmqzHOmpbQptadOWU/j3FOQgL8WREf0P/v3G12Poo/3nhvwxyW/hNr6hjZjXyPim9OOn37f+uZTj2uDn5sgv5NzkZLgY/UcxSduvElCW5iDMiTw/ZBJFz83Q+eEQLxI11xzmh4zwsH0w/7i2sYF1brShbtiGcsaGnE+R10y6MZucqEW6frfkII36I/L8s+yzibWGuZHumBm/DtbbmYFVi7ZNQDZi5DKid54//wW+TMcy0U6T17HFInLuOqzbx3H4r6x1u843TuavIBftmkl3TYt2yIj+dzny/M0/30jXbxoPJbRPjHbtl/v3qxN4xkSP+9UR8bDGe0Gya/9eXVbuFU8pXXvinr2Qtj2V/g9fO+x50taxMHS08h1jQHrUW/HcGPYqqQ2xK11kW1asR3pGjyuiZxuwrXe+dvqUZGsrnvAbzy25gWdk4OE1pBUbSD+So52v6Xvt36vLymGOOux5TuC6hnak/0uOduSY1T6oay5dOzIGpEe9OWbRVoc9hoE9ZO5ODHtYOWpK9lL6v6VrL2ufinOdK2kTRZ+Nw/EF4GAfZSD3XK4V6frUigH0DY8l9HdJvCYGL5SXEi+cVxTjzOinfHFujGn37d3xUFp9nkl33YTyM6L3VSsXoh3qF+J83O4Wj6vd426z2+/X97t3xF/Adqf2mpzn6hdiobKwzkMC8v+8nz2W6PtZzhOX7BtD8oqxn+XYcaX2dXVZWYiBSbELyeV9nEg3vnPCX4fBOfg8X+UXhDVWfOeEh+3D8W2thedGW0LPz11TIq8xYWBfi0T33+al/ou0x+31nzU+n+s/zimX+G/0xnlx7LhS+7q6rCzFwMTjI4+PY6uyigE4rHUwjzPep9VhcA7Okyq/kKjj/jDOrPMEa92vtrPW8dYan3OmtV+4NuRYvArCwDEnEv3cYnCeVPmF2OOyDoPn4D/r/MjKE2q70sA6N9qGnDuVhpzYvEYRcPH+xpXa19VlZaWy+vLTK+DYiGGbUziG3A+JdG41OE+q/Ne6H2Llr1P3QxI5nv1g37nRhvkK21DOzJBj8SoJA8ecK5HnucF5kue5SHm7d54rDLs+d57jfHTJPPfWeUW8c7BWWX35if83Zh2RlvfGCfVFfSKd/QzOZXz2k8TB03v2gxj7xgKf/fSd64aIub47A5H9t3+p/yLd6+r138iwq7XmY/9hG545nsqZQ9dWk0C8XME7VZfiGgfC5Z7zQLxC6zgNhAvXOG9NxyIQLu0fghfqaN1zwfsSof/febj7sK8+PD7sFovFcl89nPt/J7T83XZ1d79c32//3Kx2q9uz/y9Z9zrxf1JXJv4d744ivfLLiP6dZ+DG+lf+me/+ojxH910PXXKi/sjD+JY27W/WnVK8a6v0Krtouhi1rYS2jORc+3e0F/JSHBnRf+MZqE/wfqz2nxvyc5Lfwm184/8PS4O+NOidf772nQ53bEB26Dn2o0zij98Ym8aOi+v/ACXPc1gNNgAA",
  "debug_symbols": "ndrfShtBFIDxd9nrXMycfzPjqxSRqFECIZEYC0V892ZLspXssOXrjbjiDyd8h5ic7OfwvHn8eH3Y7l8O78Pdj89hd3han7aH/fnq82s1PB63u9329eH7j4c0fjH78/vvb+v9ePl+Wh9Pw102Xw2b/fP4XZz9y3a3Ge48fd2vBnMsAouCRcWiUeEJi4yFYKFY4OaOmztu7ri54+aOmwduHv3mJa6i+q0QLBSLfvMik5g9DscisChYVCwaFSVh0X3kkuwiJN32KN1TSb4WFLkVNdO/UbtzJVKvQuVWKBaGhWMRWBQsKhaNipawyFjg5g03b7h5w80bbt5w84abt35znYTpjcgpcfKv6mYzIpwoJ8aJcxKcFE4qfQLOCT9n55w4yZwIJ8qJceKcBCeFE14/8/rC6+t/ED4wygdG+cAoHxjlA6N8YJQPjPKBUT4wxusbr2+8vvH6xuv3VwsaeiEadUaCk8JJ5aRh0t8vLJPMiXCinBgnvH5/y6DT+2AtZUYKJ5WThkl/07BMMifCiXJinDgnvH7w+sHr91cOpu1CbP5ytL9zWCbd+mbXg5nnGRFOlBPjxDkJTgonlZOGSU2c8Pr9fZD5NGORZkQ5MU6ck+CkcFI5aZj090LLJHPC6zdev/H6/eWQS7oQn79Q7G+Hlknpk3Ils2VP7u+HlkmjRPoLomWSORFOlBPjxDkJTgon/fo2zZjlGWmY9BdEyyRzIpwoJ8aJcxKcFE54/czrC68v3foxfQwUqc2IcNKtHzlfSY4ZMU6ck+CkcFI5aZj0d33LJHMinPTryzQws3+v0t/1LRPnJDgpnFROGib9Xd8yyZwIJ7y+8frG6xuvb7y+8frG6zuv77y+8/rO6zuv77y+8/rO6zuv77x+8PoB63+dr36uj9v1425zuQvw5WP/9O2mwNOvt83N/YFvx8PT5vnjuBnvFPx7k+B4WilpJS2fjzIOiKaVpfvxM9HzRRZdZanj5XhIibKSaOcTnE/xGw==",
  "file_map": {
    "50": {
      "source": "struct bar {\n    enable: [bool; 4],\n    data: [Field; 2],\n    pad: u32,\n}\n\nfn main(enable: [Field; 2]) -> pub [Field; 4] {\n    let mut result = [0; 4];\n    let a: [_; 4] = foo(enable[1]);\n    for i in 0..4 {\n        result[i] = a[i].data[i % 2];\n    }\n    result\n}\n\nfn foo(x: Field) -> [bar; 4] {\n    [\n        bar { enable: [true, true, false, false], data: [x, x + 1], pad: 0 },\n        bar { enable: [true, false, false, false], data: [x + 2, x + 7], pad: 0 },\n        bar { enable: [true, true, false, true], data: [x + 3, x + 5], pad: 0 },\n        bar { enable: [false, false, false, false], data: [x + 4, x - 1], pad: 0 },\n    ]\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/wildcard_type/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
