tooling/nargo_cli/tests/snapshots/execute__tests__workspace_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "11037983421222841924",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QQQqAMAwEW/FBSZO0yc2vWGz//wRBI5TiTQfC5jQsG8NN9JtZPDdP+AaOLoLM3EpqSLhDsqoCLDUrKorKkZSoKWuxagUMmRp2Meoui//1ulzrsEWY/rdtHk55268IRAEAAA==",
  "debug_symbols": "TYxLCsMwDAXvonUWKTQbX6WU4I8cBEY2sl0oJnevEhrITvMGzYCArm8rccwVzGtAyt42yqw0YD6nWiwfVJuVBua5TIAcwCyPfYJICfWc97eCE0qJtvUe0fljhaxL+MfY2d9s+5bLXP9FssfQBY/S6TT/Aw==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    assert(x == y);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/workspace/crates/a/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
